# Tet-Ray-Game

./: CMakeLists.txt  README.md
app/: main.cpp
app/blocks/: Block.cpp  Block.h  StorageOfBlocks.cpp
app/blocks/TypesOfBlocks/cpp/: I_Block.cpp  J_Block.cpp  L_Block.cpp  O_Block.cpp  S_Block.cpp  T_Block.cpp  Z_Block.cpp
app/colors/: Colors.cpp  Colors.h
app/game/: Game.cpp  Game.h  constants.h
app/game property/: constants.cpp  constants.h
app/grid/: Grid.cpp  Grid.h  grid.cpp  grid.h
app/positions/: Position.cpp  Position.h
app/utils/types/: Types.h
